# stock-streaming

./: .gitignore  README.md  pyproject.toml  wsgi.py
ansible/: ansible.cfg
ansible/inventories/local/group_vars/: all.yml
ansible/playbooks/: bootstrap.yml  deploy.yml  setup-local.yml  setup_local_full.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/helm_repos/tasks/: main.yml
ansible/roles/k3s/tasks/: main.yml
app/: __init__.py  config.py
app/domain/: __init__.py
app/infrastructur/db/: engine.py  models.py  repositories.py
app/infrastructur/k8s/: spark_operator.py
app/infrastructur/massive/: rest_client.py
app/infrastructure/: __init__.py
app/infrastructure/db/: __init__.py  engine.py  models.py  repositories.py
app/infrastructure/k8s/: __init__.py
app/infrastructure/massive/: __init__.py  rest_client.py
app/services/: __init__.py  market_data_service.py  selection_service.py  streaming_service.py  tickers_service.py
app/templates/: base.html  charts.html  streaming.html  tickers.html
app/web/: __init__.py
app/web/blueprints/: __init__.py  api_charts.py  charts.py  pages.py  streaming.py  tickers.py
app/web/static/js/: charts.js  (+2 more)
docker/: Dockerfile.web
helm/stock-ui/: Chart.yaml  values.yaml
helm/stock-ui/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  rbac.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: build-and-load.sh  build-image.sh  deploy-helm.sh  dev-cycle.sh  load-into-k3s.sh
spark/: streaming_job.py
stock_ui.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1 files in other folders)
